--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,3 @@
 PORT=8080
+SECRET=thisisasecretkeythisshouldbechanged
+ATLAS_URI=mongodb+srv://superbshan:Shan1234!@foundationcluster.x5cg97b.mongodb.net/?retryWrites=true&w=majority&appName=foundationCluster
