--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "",
   "scripts": {
     "install": "cd client && npm install && cd ../server && npm install",
-    "dev": "concurrently \"cd client && npm start\" \"cd server && node index.js\"",
+    "dev": "concurrently \"cd client && npm start\" \"cd server && npx nodemon index.js\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -15,6 +15,7 @@
     "clsx": "^2.1.1",
     "concurrently": "^8.2.2",
     "lucide-react": "^0.378.0",
+    "nodemon": "^3.1.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
   }
